--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                     id="pesan"
                     cols="30"
                     rows="10"
+                    placeholder="Silahkan Masukan Pesan Anda"
                   ></textarea>
                 </div>
                 <div class="form-group">
