--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <div class="container">
       <div class="row">
         <h1>Hello <span id="welcome-nama"></span>,Welcome To Website</h1>
+        <script>
+          var WelcomeName = prompt("Silahkan Isikan Nama Anda");
+          document.getElementById("welcome-nama").innerText = WelcomeName;
+        </script>
         <p>Ini adalah Website Latihan Pertama</p>
       </div>
     </div>
